--- a/style.css
+++ b/style.css
@@ -56,11 +56,66 @@ nav li a:hover{
     color: #c11325;  
 }
 
-img{
+.banner{
+    position: relative; 
     width: 100%;
+    min-height: 100vh;
+    padding: 0 100px;
+    background: lightgray;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.banner .textBox{
+    position: relative; right: 6%;
+    max-width: 600px;
+    z-index: 2;
+
+}
+
+.banner .textBox h2{
+    font-family: sans-serif;
+    font-weight: 500;
+    color: black;
+    font-size: 4rem;
+    
+}
+
+.banner .textBox a{
+    position: relative; 
+    display: inline-block;
+    background: #c11325;
+    color: #fff;
+    padding: 15px 25px;
+    text-decoration: none;
+    font-size: 1.1em;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 500;
+}
+
+.banner .textBox a:hover{
+    color: gold;
 }
 
 
+.banner .imgBox{
+    position: relative;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    
+}
+
+.banner .imgBox img{
+    position: absolute; left: 50%;
+    bottom: 0;
+    height: 90%;
+    
+}
 
 
 section{
@@ -68,6 +123,15 @@ section{
     display: flex;
     justify-content: space-between;
     text-align: center;
+    font-family: sans-serif;
+    font-weight: 200;
+
+}
+
+h3{
+    font-weight: 600;
+    font-family: sans-serif;
+    
 }
 
 b{
@@ -75,7 +139,9 @@ b{
     background-color: #c11325;
     color: seashell;
     border-radius: 10px;
+    font-weight: 400;
 }
+
 
 .box{
     padding: 1rem;
@@ -91,12 +157,12 @@ b{
     border: none;
     border-radius: 10px;
     cursor: pointer;
+    font-family: sans-serif;
     
 }
 
 .btn:hover{
-    background-color: gold;
-    color: #000;
+    color:gold;
     font-size: 1.2rem;
 }
 
@@ -209,6 +275,15 @@ footer{
     background-color: lightgray;
 	padding-top: 100px;
 	font-size: 15px;
+}
+
+@media(min-width: 992px) {
+    .center-form {
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
 }
 
 
