--- a/style.css
+++ b/style.css
@@ -12,7 +12,13 @@ body{
   
 }
 
+/*Header*/
+
 header{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index:3;
     min-height: 100px;
     margin: 0;
 	background-color:seashell;
@@ -36,7 +42,6 @@ header{
 nav{
     float: right;  
     padding: 15px 15px;
-
 }
 
 nav li{
@@ -55,6 +60,9 @@ nav li a{
 nav li a:hover{
     color: #c11325;  
 }
+
+
+/*Banner*/
 
 .banner{
     position: relative; 
@@ -114,27 +122,76 @@ nav li a:hover{
     position: absolute; left: 50%;
     bottom: 0;
     height: 90%;
+    padding-top: 40px;
     
 }
 
+/*About section*/
 
-section{
+.about{
+	padding:80px 0px;
+	background-color:#ffffff;
+}
+
+.about .content{ 
+
+ display: flex;
+}
+.about .content .box{
+	flex:0 0 33.33%;
+	max-width: 33.33%;
+	padding:15px;
+}
+.about .content .box .inner{
+	background-color: seashell;
+}
+.about .content .box:nth-child(2) .inner{
+	background-color: #c11325;
+}
+.about .content .box .inner .img img{
+	width: 100%;
+}
+.about .content .box .inner .text{
+	padding:30px;
+}
+
+.about .content .box .inner .text h4{
+  font-size: 20px;
+  margin:0;
+  padding: 0px 0px 15px;
+  font-weight: 700;
+  color: darkslategray;
+  text-transform: capitalize;
+  text-align: center;
+}
+.about .content .box .inner .text p{
+	font-size: 15px;
+	line-height:20px;
+	color: darkslategray;
+	text-align: center;
+	margin:0;
+	font-family:  sans-serif;
+}
+
+/*Price Section*/
+
+.price {
     margin:  5rem 5rem;
     display: flex;
     justify-content: space-between;
     text-align: center;
-    font-family: sans-serif;
-    font-weight: 200;
-
-}
-
-h3{
-    font-weight: 600;
-    font-family: sans-serif;
+   
     
 }
 
-b{
+#price h2{
+    font-size: 30px;
+	font-weight: 200;
+	color:#000000;
+    margin-left: 40vw;
+}
+
+.price .plan b{
     padding: 1rem;
     background-color: #c11325;
     color: seashell;
@@ -142,15 +199,24 @@ b{
     font-weight: 400;
 }
 
+.price .box h3{
+    font-weight: 350;
+    font-family: sans-serif;  
+}
 
-.box{
-    padding: 1rem;
-    background-color:seashell;
+.price .box p{
+    font-family: sans-serif;
+    font-weight: 200;
 }
 
 
+.price .box{
+    padding: 1rem;
+    background-color:seashell;
 
-.btn{
+}
+
+.price .box .btn{
     background-color: #c11325;
     color: seashell;
     padding: 0.7rem 1rem;
@@ -161,11 +227,40 @@ b{
     
 }
 
-.btn:hover{
+.price .box .btn:hover{
     color:gold;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
+/*Gallery Section*/
+
+.gallery .content{
+	-webkit-display: flex;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.gallery h2{
+    font-size: 30px;
+    font-weight: 200;
+    color: #000000;
+    margin-left: 40vw;
+}
+
+
+.gallery .content .box{
+	max-width: 50%;	
+}
+.gallery .content .box img{
+	display: block;
+	width: 100%;
+    background-color:seashell;
+    padding: 1rem;
+	
+}
+
+
+/*Contact Section*/
 
 .contact{
 	margin: 0px;
@@ -181,6 +276,13 @@ b{
 	flex:0 0 50%;
 	max-width: 100%;
 	padding: 15px;
+}
+
+.contact .content .c-box h2{
+    font-size: 30px;
+    font-weight: 200;
+    color: #111;
+    padding: 0px 0px 20px;
 }
 
 .contact .content .form input,
@@ -229,9 +331,10 @@ b{
 
 .contact .content .text h2{
 	font-size: 30px;
-    font-weight: 500;
+    font-weight: 200;
     color: #c11325;
     padding: 0px 0px 20px;
+    padding-left: 40px;
 }
 
 .contact .content .text .info p{
@@ -245,8 +348,18 @@ b{
 	font-family: sans-serif;
 }
 
+.contact .content .text .info i{
+    display: block;
+	margin-bottom: 15px;
+	color: black;
+	position: relative;
+	padding-left: 40px;
+}
+
 .contact .content .text .social {
 	padding-top: 30px;
+    padding-left: 40px;
+    
 }
 .contact .content .text .social a{
 	height: 40px;
@@ -271,25 +384,16 @@ b{
 	font-size: 20px;
 }
 
+
+/*Footer*/
+
 footer{
     background-color: lightgray;
 	padding-top: 100px;
 	font-size: 15px;
 }
 
-@media(min-width: 992px) {
-    .center-form {
-        padding-top: 30px;
-        min-height: 240px;
-        margin: 0 auto;
-        max-width: 50%;
-    }
-}
-
-
-
-
-
+/*Responsive*/
 
 
 
