--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ nav li a:hover{
     width: 100%;
     min-height: 100vh;
     padding: 0 100px;
-    background: #c11325;
+    background: lightgrey;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -83,11 +83,19 @@ nav li a:hover{
 }
 
 .banner .textBox h2{
-    font-family: sans-serif;
-    font-weight: 500;
-    color: black;
-    font-size: 4rem;
     
+    font-weight: 800;
+    color: black;
+    font-size: 3em;
+    
+    
+}
+
+.banner .textBox p{
+    color: black;
+    font-size: 1.1em;
+    margin: 5px 0 25px;
+    font-weight: 200;
 }
 
 
@@ -109,36 +117,30 @@ nav li a:hover{
     
 }
 
-/*About section*/
+/*Services section*/
 
-.about{
-	padding:80px 0px;
-	background-color: seashell;
-}
 
-.about .content{ 
+.services .content{ 
  display: flex;
+ background-color: seashell;
+ padding:80px 0px;
 }
-.about .content .box{
-	flex:0 0 33.33%;
-	max-width: 33.33%;
+.services .content .box{
+	
 	padding:15px;
 }
-.about .content .box .inner{
-	background-color: seashell;
-}
 
-.about .content .box .inner .img img{
+.services .content .box .inner .img img{
 	width: 100%;
 
 }
 
 
-.about .content .box .inner .text{
+.services .content .box .inner .text{
 	padding:30px;
 }
 
-.about .content .box .inner .text h4{
+ .services .box .inner .text h4{
   font-size: 20px;
   margin:0;
   padding: 0px 0px 15px;
@@ -147,7 +149,7 @@ nav li a:hover{
   text-transform: capitalize;
   text-align: center;
 }
-.about .content .box .inner .text p{
+ .services .content .box .inner .text p{
 	font-size: 15px;
 	line-height:20px;
 	color: darkslategray;
@@ -164,8 +166,7 @@ nav li a:hover{
     justify-content: space-between;
     text-align: center;
     
-   
-    
+     
 }
 
 #price h2{
@@ -173,6 +174,7 @@ nav li a:hover{
 	font-weight: 200;
 	color:#000000;
     margin-left: 40vw;
+    padding: 30px;
 }
 
 .price .plan b{
@@ -218,8 +220,11 @@ nav li a:hover{
 
 /*Gallery Section*/
 
+.gallery{
+    background-color: seashell;
+    padding: 30px;
+}
 .gallery .content{
-	-webkit-display: flex;
 	display: flex;
 	flex-wrap: wrap;
 }
@@ -227,7 +232,7 @@ nav li a:hover{
 .gallery h2{
     font-size: 30px;
     font-weight: 200;
-    color: #000000;
+    color: #111111;
     margin-left: 40vw;
 }
 
@@ -238,7 +243,7 @@ nav li a:hover{
 .gallery .content .box img{
 	display: block;
 	width: 100%;
-    background-color:seashell;
+    background-color: seashell;
     padding: 1rem;
 	
 }
