--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ nav li a:hover{
 
 #price h2{
     font-size: 30px;
-	font-weight: 200;
+	font-weight: 500;
 	color:#000000;
     margin-left: 40vw;
     padding: 30px;
@@ -218,6 +218,57 @@ nav li a:hover{
     font-size: 1rem;
 }
 
+/*Class Schedule Section*/
+.schedule{
+	padding:80px 0px;
+}
+
+.schedule .content{
+	-webkit-display: flex;
+	display: flex;
+}
+
+.schedule .content .box{
+	flex:0 0 50%;
+	max-width: 100%;
+	padding:15px;
+}
+
+.schedule .content .text h2{
+    font-size: 30px;
+    font-weight: 500;
+    color: #000000;
+    padding: 0px 0px 20px;
+}
+
+
+.schedule .content .timing .table{
+	width: 100%;
+	border-collapse: collapse;
+}
+
+.schedule .content .timing .table td{
+	border:1px solid #dfdfdf;
+	padding: 8px;
+	font-size: 15px;
+	text-align: center;
+	color:#222222;
+}
+
+.schedule .content .timing .table tr:nth-child(even) td.day{
+	background-color: #222222;
+}
+.schedule .content .timing .table tr:nth-child(odd) td.day{
+	background-color: #444444;
+}
+
+.schedule .content .timing .table tr td.day{
+	color:#ffffff;
+	border-color:transparent;
+}
+
+
+
 /*Gallery Section*/
 
 .gallery{
@@ -231,7 +282,7 @@ nav li a:hover{
 
 .gallery h2{
     font-size: 30px;
-    font-weight: 200;
+    font-weight: 500;
     color: #111111;
     margin-left: 40vw;
 }
@@ -269,7 +320,7 @@ nav li a:hover{
 
 .contact .content .c-box h2{
     font-size: 30px;
-    font-weight: 200;
+    font-weight: 500;
     color: #111;
     padding: 0px 0px 20px;
 }
@@ -320,7 +371,7 @@ nav li a:hover{
 
 .contact .content .text h2{
 	font-size: 30px;
-    font-weight: 200;
+    font-weight: 500;
     color: #c11325;
     padding: 0px 0px 20px;
     padding-left: 40px;
