--- a/style.css
+++ b/style.css
@@ -75,6 +75,18 @@ nav li a:hover{
     align-items: center;
 }
 
+.banner:before{
+    content: '';
+    position: absolute;
+    left: 1000px;
+    width: 400px;
+    height: 100%;
+    background: red;
+    transform-origin: top;
+    transform: skewX(-30deg);
+    
+}
+
 .banner .textBox{
     position: relative; right: 6%;
     max-width: 600px;
@@ -83,11 +95,9 @@ nav li a:hover{
 }
 
 .banner .textBox h2{
-    
     font-weight: 800;
     color: black;
     font-size: 3em;
-    
     
 }
 
@@ -96,6 +106,7 @@ nav li a:hover{
     font-size: 1.1em;
     margin: 5px 0 25px;
     font-weight: 200;
+    
 }
 
 
@@ -110,7 +121,7 @@ nav li a:hover{
 }
 
 .banner .imgBox img{
-    position: absolute; left: 50%;
+    position: absolute; left: 18%;
     bottom: 0;
     height: 90%;
     padding-top: 40px;
@@ -221,11 +232,12 @@ nav li a:hover{
 /*Class Schedule Section*/
 .schedule{
 	padding:80px 0px;
+    background-color: seashell;
 }
 
 .schedule .content{
-	-webkit-display: flex;
 	display: flex;
+    
 }
 
 .schedule .content .box{
@@ -238,13 +250,15 @@ nav li a:hover{
     font-size: 30px;
     font-weight: 500;
     color: #000000;
-    padding: 0px 0px 20px;
+    padding: 0px 20px;
 }
 
 
 .schedule .content .timing .table{
 	width: 100%;
 	border-collapse: collapse;
+
+    
 }
 
 .schedule .content .timing .table td{
@@ -252,7 +266,8 @@ nav li a:hover{
 	padding: 8px;
 	font-size: 15px;
 	text-align: center;
-	color:#222222;
+	color: slategray;
+    font-weight: 500;
 }
 
 .schedule .content .timing .table tr:nth-child(even) td.day{
@@ -272,7 +287,6 @@ nav li a:hover{
 /*Gallery Section*/
 
 .gallery{
-    background-color: seashell;
     padding: 30px;
 }
 .gallery .content{
