--- a/style.css
+++ b/style.css
@@ -72,7 +72,85 @@ nav li a .btn{
 
 }
 
+/*Login Form*/
 
+.loginbox{
+    width: 320px;
+    height: 420px;
+    background: #000;
+    color:seashell;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50% , -50%);
+    box-sizing: border-box;
+    padding: 70px 30px;
+}
+
+.loginbox .avatar{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: absolute;
+    top: -50px;
+    left: calc(50% - 50px);
+}
+
+.loginbox h1{
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.loginbox p{
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
+
+.loginbox input{
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.loginbox input[type="text"], input[type="password"]{
+    border: none;
+    border-bottom: 1px solid seashell;
+    background: transparent;
+    outline: none;
+    height: 40px;
+    color: seashell;
+    font-size: 15px;
+}
+
+.loginbox input[type="submit"]{
+    border: none;
+    outline: none;
+    height: 40px;
+    background: #fb2525;
+    color: seashell;
+    font-size: 20px;
+    border-radius: 20px;
+}
+
+
+.loginbox input[type="submit"]:hover{
+    cursor: pointer;
+    background: gold;
+    color: black;
+}
+
+.loginbox a{
+    font-size: 15px;
+    color: darkgray;
+    text-decoration: none;
+    line-height: 20px;
+}
+
+.loginbox a:hover{
+    color: gold;
+}
 
 
 /*Banner*/
