--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header{
 	
 }
 
-#head{
+#head {
     color: black;
     font-size: 2rem;
     float: left;
@@ -35,7 +35,7 @@ header{
 
 }
 
-#head span{
+#head span {
     color: red;
 }
 
@@ -67,9 +67,12 @@ nav li a .btn{
     padding: 0.4rem 1rem;
     border: none;
     border-radius: 10px;
-    cursor: pointer;
-   
+    cursor: pointer;   
 
+}
+
+nav li a .btn:hover{
+    color: gold;
 }
 
 /*Login Form*/
@@ -152,6 +155,27 @@ nav li a .btn{
     color: gold;
 }
 
+.home nav{
+    float: left;
+    padding: 15px 15px;
+}
+
+.home nav li{
+    display: inline;
+    padding: 1.7rem;
+    
+}
+
+.home nav li a{
+    color: black;
+    text-decoration: none;
+    font-family: sans-serif;
+    font-size: 30px;
+}
+
+.home nav li a:hover{
+    color: #c11325;  
+}
 
 /*Banner*/
 
