--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 
 *{
     padding: 0;
@@ -571,6 +570,57 @@ footer{
     background-color: lightgray;
 	padding-top: 100px;
 	font-size: 15px;
+}
+
+/*Responsive*/
+
+/*if screen width is less than or equal to 767px then*/
+@media(max-width: 767px){
+
+.services .content{
+	flex-wrap: wrap;
+}
+.services .content .box {
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+.schedule .content{
+	flex-wrap: wrap;
+}
+.schedule .content .box{
+    flex: 0 0 100%;
+    max-width: 100%;	
+}
+
+ .gallery .content{
+  flex-wrap: wrap;
+ }
+.gallery .content .box {
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+.price .plan{
+	flex-wrap: wrap;
+}
+.price .plan .box {
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+.contact .content{
+	flex-wrap: wrap;
+}
+.contact .content .box {
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+}
+
+/*if screen width is less than or equal to 550px then*/
+@media(max-width: 550px){
+  .banner h2{
+      font-size: 30px;
+  }
 }
 
 
